// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDialogV2 should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-v2"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;

exports[`BpkDialogV2 should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-v2"
    testid="123"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;

exports[`BpkDialogV2 should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-v2 custom-classname"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;
